--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -55,7 +55,7 @@ idam.client.secret=${IDAM_OAUTH2_CLIENT_SECRET:QM5RQQ53LZFOSIXJ}
 idam.client.redirect_uri=${IDAM_OAUTH2_REDIRECT_URL:https://localhost:3000/authenticated}
 
 #Document store
-document_management.url=${DOCUMENT_MANAGEMENT_URL:http://dm-store:5005}
+document_management.url=${DOCUMENT_MANAGEMENT_URL:http://localhost:5005}
 dm_gateway.url=${DM_GATEWAY_URL:http://localhost:3455}
 doc_assembly.url=${DOC_ASSEMBLY_URL:http://localhost:4631}
 doc_assembly.adjourn_case=TB-SCS-GNO-ENG-adjournment-notice.docx
